--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<link rel="stylesheet" type="text/css" href="style/leaflet.css" />
 		<link rel="stylesheet/less" type="text/css" href="style/hover.less" />
+         <link rel="stylesheet" type="text/css" href="style/legend.css" />
 		<script type="text/javascript" src="js/lib/leaflet-custom.js"></script>
 		<script type="text/javascript" src="js/lib/jquery-1.7.1.min.js"></script>
 		<script type="text/javascript" src="js/lib/less-1.2.2.min.js"></script>
@@ -22,5 +23,8 @@
 	</head>
 	<body onload="init()">
 		<div id="map" style="height: 760px;"></div>		
+		 <div id="acert-legend">
+		<img src="style/images/play.png" align="absmiddle" style="margin: 8px;">Click icon to view videos and gigapans highlighting Arizona's iconic landscapes.   			
+		</div>	
 	</body>
 </html>
